--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~52.0.23",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
@@ -23,13 +25,18 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.469.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,6 +44,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.3.3"
   },
   "private": true
