--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/native": "^7.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.23",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
@@ -36,8 +39,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
