--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.23",
+    "expo": "~52.0.24",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
+    "expo-router": "~4.0.16",
+    "expo-splash-screen": "^0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
