--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.24",
-    "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "^0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~52.0.26",
+    "expo-font": "~13.0.3",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.469.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -40,7 +40,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0"
+    "tailwind-variants": "^0.3.0",
+    "jest-expo": "~52.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
