--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.26",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "jest-expo": "~52.0.3",
     "lucide-react-native": "^0.469.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -37,11 +39,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.13",
     "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.0",
-    "jest-expo": "~52.0.3"
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
